fix donate prizes max height when prizes overflow

--- a/bundles/tracker/donation/components/DonationPrizes.mod.css
+++ b/bundles/tracker/donation/components/DonationPrizes.mod.css
@@ -19,3 +19,8 @@
   padding: 8px 16px;
   border-bottom: var(--border-secondary);
 }
+
+.prizes {
+  height: 240px;
+  overflow-y: scroll;
+}
